# dishes-review

./: README.md
backend/: Cargo.toml  ROADMAP.md  todo.md
backend/migrations/: 20221108091005_initialize.sql
backend/src/: bot.rs  data.rs  db.rs  lib.rs
backend/tests/: prepare-db.script
frontend/: api.ts  config.json  package-lock.json  package.json
frontend/pages/: index.tsx
frontend/src/: api.ts  index.tsx  main.tsx
frontend/src/routes/: restaurants.tsx  reviews.tsx  root.tsx
