[package]
name = "meal-review"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
teloxide = { version = "0.11", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.6"
derive_builder = "0.11.2"
fuzzy-matcher = "0.3.7"
